# ESP32-LCC

./: .gitignore  NewESP32Firmware.tcl  README.md  bom_csv_grouped_by_partnum.py  tagRev.tcl
AtlasLightBoardWiFiLCCTraction/: ASPI-0628-3R9M-T1.stp  AtlasLightBoardWiFiLCCTraction.kicad_pcb  AtlasLightBoardWiFiLCCTraction.kicad_prl  AtlasLightBoardWiFiLCCTraction.kicad_pro  AtlasLightBoardWiFiLCCTraction.kicad_sch  README.md  fp-info-cache  fp-lib-table  sym-lib-table
CommonComponents/FS/: CMakeLists.txt
CommonComponents/GeneralIO/: CMakeLists.txt  VetoBitEventInterface.cpp
CommonComponents/GeneralIO/include/: Button.hxx  ButtonConfig.hxx  LED.hxx  LEDConfig.hxx  OccupancyDetector.hxx  OccupancyDetectorConfig.hxx  Points.hxx  PointsConfig.hxx  ServoTurnout.hxx  ServoTurnoutConfig.hxx  Turnout.hxx  TurnoutConfig.hxx  VetoBitEventInterface.hxx
CommonComponents/I2CDriver/: CMakeLists.txt  Esp32HardwareI2C.cpp
CommonComponents/I2CDriver/include/: Esp32HardwareI2C.hxx  i2c-dev.h  i2c.h
CommonComponents/Signals/: CMakeLists.txt  Mast.cpp  Rule.cpp
CommonComponents/Signals/include/: Lamp.hxx  LampConfig.hxx  Mast.hxx  MastConfig.hxx  Rule.hxx  RuleConfig.hxx
CommonLibraries/: 74lv125AN.lib  ESP32_mini.lib  JD-T1800.kicad_sym  MP6614GN-Z.kicad_sym  REG1117-3_3_2K5G4.kicad_sym  RT9080-33GJ5.kicad_sym  esp32_devboards.lib  tbd62064afg_1.kicad_sym
ESP32-16LedDriver/: CAN_Transeiver.sch  ESP32-16LedDriver-cache.lib  ESP32-16LedDriver-rescue.lib  ESP32-16LedDriver.pro  ESP32-16LedDriver.sch  PowerSupply.sch  drivers.sch  fp-lib-table
ESP32-D0WD-V3-MultiFunction/: ESP32-D0WD-V3-MultiFunction.pro  fp-lib-table
ESP32-Feather-6B6L/: 6Buttons.kicad_sch  8LEDs.kicad_sch  CANTransceiver.kicad_sch  ESP32-Feather-6B6L.kicad_pcb  ESP32-Feather-6B6L.kicad_prl  ESP32-Feather-6B6L.kicad_pro  ESP32-Feather-6B6L.kicad_sch  ESP32-Feather-6B6L.lbr  FeatherWing.lib  PowerSupply.kicad_sch  fp-info-cache  fp-lib-table  vpad.lbr
ESP32-Feather-6B6L-SMD/: 6Buttons.kicad_sch  8LEDs.kicad_sch  CANTransceiver.kicad_sch  ESP32-Feather-6B6L  ESP32-Feather-6B6L-SMD.kicad_pcb  ESP32-Feather-6B6L-SMD.kicad_prl  ESP32-Feather-6B6L-SMD.kicad_pro  ESP32-Feather-6B6L-SMD.kicad_sch  FeatherWing.mod  PowerSupply.kicad_sch  sym-lib-table
ESP32-Mini32-OctalBuffer/: CanTransciver.kicad_sch  CanTransciver.sch  ESP32-Mini32-OctalBuffer-cache.lib  ESP32-Mini32-OctalBuffer-rescue.lib  ESP32-Mini32-OctalBuffer.kicad_pcb  ESP32-Mini32-OctalBuffer.kicad_prl  ESP32-Mini32-OctalBuffer.kicad_pro  ESP32-Mini32-OctalBuffer.kicad_sch  ESP32-Mini32-OctalBuffer.pro  ESP32-Mini32-OctalBuffer.sch  MCU.kicad_sch  MCU.sch  PowerSupply.kicad_sch  PowerSupply.sch  fp-info-cache  fp-lib-table  sym-lib-table
ESP32-Mini32-OctalServo/: CANTransceiver.sch  ESP32-Mini32-OctalServo-cache.lib  ESP32-Mini32-OctalServo-rescue.lib  ESP32-Mini32-OctalServo.kicad_pcb  ESP32-Mini32-OctalServo.kicad_prl  ESP32-Mini32-OctalServo.kicad_pro  ESP32-Mini32-OctalServo.net  ESP32-Mini32-OctalServo.pro  ESP32-Mini32-OctalServo.sch  MCU.sch  PowerSupply.sch  fp-lib-table  sym-lib-table
ESP32-OctalBufferOpenMRNIDF/: CMakeLists.txt  sdkconfig.defaults
ESP32-OctalCoilSMOpenMRNIDF/: CMakeLists.txt  sdkconfig.defaults
ESP32-OctalServo/: CanTransciver.sch  ESP32-OctalServo-cache.lib  ESP32-OctalServo-rescue.lib  ESP32-OctalServo.fzz  ESP32-OctalServo.kicad_pcb  ESP32-OctalServo.kicad_prl  ESP32-OctalServo.kicad_pro  ESP32-OctalServo.pro  ESP32-OctalServo.sch  MCU.sch  PowerSupply.sch  fp-lib-table  sym-lib-table
ESP32-OctalServoOpenMRNIDF/: CMakeLists.txt  sdkconfig.defaults
ESP32-PWMHalfSiding/: ESP32-PWMHalfSiding.tex  KitBooklet.tex  KitBooklet2023update.tex
ESP32-PWMHalfSidingOpenMRNIDF/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32-PWMHalfSidingSMD/: ESP32-PWMHalfSidingSMD.tex  Front_Cover.xcf  KitBooklet2023update.tex
ESP32-PWMHalfSidingSMD-T7/: ESP32-PWMHalfSidingSMD-T7-rescue.lib
ESP32-S3-MultiFunction/: Buttons4LEDs4.sch  CAN_Transceiver.sch  ESP32-MCU.sch  ESP32-S3-MultiFunction-cache.lib  ESP32-S3-MultiFunction.kicad_pcb  ESP32-S3-MultiFunction.net  ESP32-S3-MultiFunction.pro  ESP32-S3-MultiFunction.sch  OccDetect4.sch  PCA9685Driver.sch  PowerSupply.sch  StallMotors.sch  fp-lib-table
ESP32-S3-MultiFunctionOpenMRNIDF/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32-S3-MultiFunctionOpenMRNIDF/main/: CMakeLists.txt  HealthMonitor.hxx  PCA9685PWM.cpp  PCA9685PWM.hxx  SignalLampTester.hxx  esp32multifunction.cpp  hardware.hxx  idf_component.yml
ESP32-S3-QuadNeoPixelOpenMRNIDF/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3-QuadNeoPixelOpenMRNIDF/components/NeoPixel/: CMakeLists.txt  Esp32NeoPixel.cpp  esp.c
ESP32-S3-QuadNeoPixelOpenMRNIDF/components/NeoPixel/include/: Esp32NeoPixel.hxx
ESP32-S3DK-I2CTest/: ESP32-S3-DEVKIT (for solderless BB).fzpz  ESP32-S3DK-I2CTest.fzz
ESP32-S3DK-OctalServo/: .~lock.ESP32-OctalServo.csv#  CanTransciver.sch  ESP32-S3DK-OctalServo-cache.lib  ESP32-S3DK-OctalServo-rescue.lib  ESP32-S3DK-OctalServo.kicad_pcb  ESP32-S3DK-OctalServo.pro  ESP32-S3DK-OctalServo.sch  MCU.sch  PowerSupply.sch  fp-lib-table
ESP32-S3DK-OctalSingleCoil/: 8SingleCoilSM.sch  CanTransciver.sch  ESP32-S3DK-OctalSingleCoil-cache.lib  ESP32-S3DK-OctalSingleCoil.kicad_pcb  ESP32-S3DK-OctalSingleCoil.pro  ESP32-S3DK-OctalSingleCoil.sch  MCU.sch  PowerSupply.sch  fp-lib-table
ESP32-T7S3-ArduinoBase/firmware/main/: AzatraxRIR4Crossing.hxx  AzatraxRIR4PC.hxx  CMakeLists.txt  FactoryResetHelper.hxx  esp32arduinobase.cpp  hardware.hxx  idf_component.yml
ESP32-T7S3-TextDisplaySign/firmware/components/GFX/: Adafruit_SPITFT.cpp  CMakeLists.txt
ESP32-T7S3-TextDisplaySign/firmware/components/GFX/include/: Adafruit_SPITFT.h
ESP32-T7S3-TextDisplaySign/firmware/main/: CMakeLists.txt  FactoryResetHelper.hxx  ImageReader.cpp  ImageReader.hxx  RetailDisplay.cpp  RetailDisplay.hxx  _0.xbm  _1.xbm  _2.xbm  _3.xbm  _4.xbm  _5.xbm  _6.xbm  _7.xbm  _8.xbm  _9.xbm  colon.xbm  esp32textdisplay.cpp  hardware.hxx
T7S3-MiniDisplay/firmware/components/SSD1306/: CMakeLists.txt
(+517 files in other folders)
